# Trendpup_Aptos

./: .env.example  .gitignore  README.md  README_NEW.md  start.sh
agent/: pyproject.toml  requirements.txt
agent/rag/: agent.py  prompts.py
backend/: ai_analyzer.ts  api-server.ts  package.json  pnpm-workspace.yaml  token_scraper.ts  tsconfig.json  twitter_scraper.ts
contract/: .env.example  Makefile  Move.toml  README.md  integration.ts
contract/scripts/: deploy.sh  test_contract.sh  verify_deployment.sh
contract/sources/: access_control.move
frontend/: next.config.cjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/public/: HeartbeatWorker.js
frontend/scripts/: copy-heartbeat-worker.sh  patch-heartbeat-worker.sh
frontend/src/: aptos.ts
frontend/src/app/: layout.tsx  metadata.ts  page.tsx
frontend/src/app/api/revalidate/: route.ts
frontend/src/app/api/token-data/: route.ts
frontend/src/app/api/vertex-proxy/: route.ts
frontend/src/app/components/: AccessControl.tsx  AptosWalletConnect.tsx  BalanceChecker.tsx  ChatInterface.tsx  MemecoinsExplorer.tsx
frontend/src/app/services/: TokenData.ts
frontend/src/services/: AccessControl.ts
